@@ -4,3 +4,4 @@
 [2025-03-25 20:17:50]	No se encontró una version válida	Version inestable
 [2025-03-25 20:27:34]	No se encontró una version válida	Version inestable
 [2025-03-25 20:42:24]	No se encontró una version válida	Version estable
+[2025-03-26 20:58:51]	No se encontró una version válida	Calc layout mejorado
